fixed print CSS and vertical alignment of small lists, initial Sally/Chris review

--- a/resume.css
+++ b/resume.css
@@ -155,7 +155,11 @@ ul li:before {
 	margin-top: 1em;
 }
 .item.tight{
+	margin-top: 0.2em;
 	margin-bottom: 0;
+}
+.item.tight:nth-child(2){ /* comes after title */
+	margin-top: 1em;
 }
 
 .item p{
@@ -170,6 +174,7 @@ ul li:before {
 	padding-left: 0px;
 	margin-top: 4px;
 	margin-bottom: 4px;
+	display: flow-root;
 }
 .tight ul li:before {/*bullets are lines instead of circles*/
 	content: " | ";
@@ -182,6 +187,7 @@ ul li:before {
 	display: inline-block;
 	white-space: nowrap;
 	padding-right: 0.2em;
+	margin-top: 1px;
 }
 
 /*~~~~~ peer reviews ~~~~~~*/
